--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dev_dependencies:
     sdk: flutter
   test: ^1.19.5
   sqflite_common_ffi: ^2.1.0+2
+  bloc_test: ^9.0.3
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
